Fixed settings not overflowing

--- a/src/css/components/settingsContainer.scss
+++ b/src/css/components/settingsContainer.scss
@@ -3,9 +3,10 @@
     flex-direction: column;
 
     font-family: 'Accidental Presidency';
-
-    height: 100%;
     width: 100%;
+
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .settings-container-item,
